--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,18 @@ language: objective-c
 osx_image: xcode8
 xcode_project: CasperSplash.xcodeproj
 xcode_scheme: CasperSplash
-xcode_sdk: macosx10.11
+xcode_sdk: macosx10.12
+
+# https://docs.travis-ci.com/user/multi-os/
+matrix:
+  include:
+    - xcode_sdk: macosx10.11
+
+# http://stackoverflow.com/questions/34231587/xcode-ui-testing-on-travis-for-osx-with-xcode-helper-accessibility
+# Not compatible with 10.12 
+# Instead, disable the UI tests http://cleanswifter.com/disable-tests-xcode/
+#install:
+#- sudo sqlite3 "/Library/Application Support/com.apple.TCC/TCC.db" "INSERT INTO access VALUES ('kTCCServiceAccessibility','com.apple.dt.Xcode-Helper',0,1,1,NULL,NULL);"
 
 # https://sipb.mit.edu/doc/safe-shell/
 
