--- a/.travis.yml
+++ b/.travis.yml
@@ -9,11 +9,6 @@ matrix:
   include:
     - xcode_sdk: macosx10.11
 
-
-env:
-- CODE_SIGNING_REQUIRED=NO
-- CODE_SIGN_IDENTITY=""
-
 # http://stackoverflow.com/questions/34231587/xcode-ui-testing-on-travis-for-osx-with-xcode-helper-accessibility
 # Not compatible with 10.12 
 # Instead, disable the UI tests http://cleanswifter.com/disable-tests-xcode/
@@ -24,7 +19,7 @@ env:
 
 script:
 - set -o pipefail
-- xcodebuild build test -project CasperSplash.xcodeproj -scheme CasperSplash | xcpretty
+- xcodebuild build test -project CasperSplash.xcodeproj -scheme CasperSplash CODE_SIGNING_REQUIRED=NO CODE_SIGN_IDENTITY="" | xcpretty
 
 notifications:
 slack: macadmins:Q5jgs97J5c9fqvubb1Kk301W
