--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ matrix:
 
 script:
 - set -o pipefail
-- xcodebuild build test -project CasperSplash.xcodeproj -scheme CasperSplash CODE_SIGNING_REQUIRED=NO CODE_SIGN_IDENTITY="" | xcpretty
+- xcodebuild build test -project CasperSplash.xcodeproj -scheme CasperSplash CODE_SIGNING_REQUIRED=NO CODE_SIGN_IDENTITY="" -skip-testing:CasperSplashUITests | xcpretty
 
 notifications:
 slack: macadmins:Q5jgs97J5c9fqvubb1Kk301W
